dark mode switch now matches the cookie state. fixed a few more hard coded css colors to be controlled by the switch.

--- a/dart-cart-client/src/App.css
+++ b/dart-cart-client/src/App.css
@@ -116,3 +116,22 @@ input[type="checkbox"]{
     color: var(--text-primary);
     background-color: var(--background);
 }
+
+.card-title {
+    color: var(--text-primary);
+    background-color: var(--background);
+}
+
+.card-text {
+    color: var(--text-primary);
+    background-color: var(--background);
+}
+
+* {
+    color: var(--text-primary);
+}
+
+.footer-info {
+    color: var(--text-primary);
+    background-color: var(--background);
+}
